# zygo

./: .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  requirements.txt
app/: __init__.py  email.py  models.py  openapi.yaml
app/api_v1/: __init__.py  base.py  internal.py  views.py
app/auth/: flows.py  views.py
app/commands/: init_db.py
app/flows/: flow_helpers.py  integrations.py  job_handler.py  job_queue.py
app/main/: __init__.py  base.py  views.py
app/static/css/: custom-slim.css  drawflow.css  driver.css  form_builder.css  output.css
app/static/js/: field-transformers.js  variable-picker.js
app/templates/: credentials.html  dashboard_view.html  dashboards.html  data_tables.html  flows.html  form_builder.html  form_password.html  form_public.html  home.html  ticket_view.html  tickets.html  view_flow.html
app/templates/auth/: accept.html  login.html  magic-login.html  register.html  reset_password.html  reset_password_request.html  set_password.html
app/templates/email/: basic_template.html
app/templates/helpers/: src_macros.html
app/templates/layouts/: _alpine_globals.html  base.html
app/utils/: authorizer.py  decorators.py  misc.py  mixin_models.py
flowcore/: __init__.py  flow_runner.py  nodes.py  operators.py  pyproject.toml  python_runner.py  resolve.py
scheduler/: Dockerfile  config.py  requirements.txt  scheduler.py
tl_src/: README.md  main.css  package-lock.json  package.json  tailwind.config.js
tools/: test_client.py
worker/: Dockerfile  config.py  job_handler.py  requirements.txt  worker.py
(+8 files in other folders)
